--- a/Git_sample/src/main/webapp/WEB-INF/dev.html
+++ b/Git_sample/src/main/webapp/WEB-INF/dev.html
@@ -6,6 +6,6 @@
 <script type="text/javascript" src = "./js/jquery-3.7.1.js"></script>
 </head>
 <body>
-	<h1>dev Test</h1>
+	<h1>dev Test qqqq</h1>
 </body>
 </html>
